--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -140,6 +140,13 @@
     stroke-width: 2;
     fill: none;
 }
+.textAnnotation > .bpmn-text-node pre {
+	color: #447c3c;
+	font-size: 0.6em;
+	font-family: sans-serif;
+	margin: 0.3em;
+}
+
 
 /*** Pool and Lances **/
 
@@ -204,7 +211,11 @@
 .label-edit input {
     margin-top: -3px;
     margin-left: -3px;
+    
 }
-
+.label-edit textarea {
+    margin: 1px;
+    font-size: 1em !important;
+}
 
 
