optimized by adding a new CSS Rule 'poiter-events: none'
Issue #143

--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -168,6 +168,7 @@
 
 .pool > .sprotty-node {
     fill: var(--theia-titleBar-activeBackground);
+    pointer-events: none;
     opacity: 70%;
     stroke: var(--theia-focusBorder);
     outline-color: var(--theia-focusBorder);
