--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -179,7 +179,10 @@
 .pool > .sprotty-node.mouseover {
 	 opacity: 60%;
 }
-
+.pool .header {
+	fill: var(--theia-titleBar-activeBackground);
+}
+ 
 .lane > .sprotty-node {
     fill: none;
     stroke: var(--theia-focusBorder);
