--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -163,6 +163,19 @@
 	white-space: pre-wrap;
 }
 
+.task > .bpmn-text-node pre {
+	color: #f0f3f8;
+	text-align: center;
+	font-size: 0.6em;
+	font-family: sans-serif;
+	white-space: pre-wrap;
+	margin: 7px 20px 0px 20px;
+}
+
+.label-edit textarea {
+    margin: 1px;
+    font-size: 1em !important;
+}
 
 /*** Pool and Lances **/
 
@@ -228,14 +241,5 @@
     fill: transparent;
 }
 
-.label-edit input {
-    margin-top: -3px;
-    margin-left: -3px;
-    
-}
-.label-edit textarea {
-    margin: 1px;
-    font-size: 1em !important;
-}
 
 
