impl and refactoring
Issue #176

--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -229,6 +229,9 @@
     stroke: #ffdf8b;
 }
 
+.sequenceFlow .default-symbol {
+    stroke-width: 3;
+}
 /* messageFlow */
 .sprotty-edge.messageFlow .line {
    stroke-dasharray: 6,4;
