--- a/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
+++ b/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
@@ -129,3 +129,9 @@
 .bpmn-properties-body .categorization-detail .vertical-layout {
 	clear: both;
 }
+
+/* Custom BPMN Styles **/
+
+.root_properties_conditionExpression textarea {
+    min-height: 14em !important;    
+}
