--- a/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
+++ b/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
@@ -29,8 +29,7 @@
 	position: absolute;
 	bottom: 0px;
 	z-index: 20;
-	width: 100%;
-    xxxbackground: var(--theia-titleBar-activeBackground);
+    width: 100%;
     background: var(--theia-editor-background);
     opacity: 0.98 !important;
     color: var(--theia-editor-foreground);
@@ -152,4 +151,10 @@
 
 .root_properties_conditionExpression textarea {
     min-height: 14em !important;    
+}
+.input-description {
+    color: #666;
+    font-size: var(--theia-ui-font-size0) !important;
+    line-height: 1.4rem;
+    margin-left: 3px;
 }
