added optional info label to taskElement
Issue #289

--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -151,9 +151,10 @@
     font-size: 0.6em;
 }
 
-.task > .extension .label {
+.task .extension text {
 	fill: #f0f3f8;
     font-size: 7pt;
+    text-anchor: start;
 }
 
 
