--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/helper-lines.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/helper-lines.css
@@ -13,16 +13,21 @@
  *
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
-import { GModelElement } from '@eclipse-glsp/sprotty';
-import { Direction } from './model';
 
-export interface IHelperLineManager {
-    /**
-     * Calculates the minimum move delta that is necessary to break through a helper line.
-     *
-     * @param element element that is being moved
-     * @param isSnap whether snapping is active or not
-     * @param direction direction in which the target element is moving
-     */
-    getMinimumMoveDelta(element: GModelElement, isSnap: boolean, direction: Direction): number;
+.helper-line {
+    pointer-events: none;
+    stroke: red;
+    stroke-width: 1px;
+    opacity: 1;
+}
+
+.selection-bounds {
+    pointer-events: none;
+    fill: blue;
+    fill-opacity: 0.05;
+    stroke-linejoin: miter;
+    stroke-linecap: round;
+    stroke: darkblue;
+    stroke-width: 1px;
+    stroke-dasharray: 2;
 }
