--- a/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
+++ b/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
@@ -21,14 +21,14 @@
  *     Imixs Software Solutions GmbH - Project Management
  *     Ralph Soika - Software Developer
  ********************************************************************************/
-.tool-palette { 
-	z-index: 10;
+.tool-palette {
+    z-index: 10;
 }
 
 .bpmn-property-panel {
-	position: absolute;
-	bottom: 0px;
-	z-index: 20;
+    position: absolute;
+    bottom: 0px;
+    z-index: 20;
     width: 100%;
     background: var(--theia-editor-background);
     opacity: 0.98 !important;
@@ -38,10 +38,10 @@
 
 /* theia-editorWidget-background */
 .bpmn-property-header {
-	padding-left: 8px;
+    padding-left: 8px;
     background: var(--theia-titleBar-activeBackground);
     color: var(--theia-titleBar-activeForeground);
-    opacity: 1; 
+    opacity: 1;
     font-weight: bold;
     border: 0;
     overflow: hidden;
@@ -60,9 +60,11 @@
     padding-left: 4px;
     padding-right: 4px;
 }
+
 .bpmn-property-header .header-tools {
-	cursor: default;
+    cursor: default;
 }
+
 .bpmn-property-header .header-tools i {
     border: none;
 }
@@ -71,26 +73,30 @@
     background: var(--theia-menubar-selectionBackground);
 }
 
-.bpmn-property-header .header-tools .clicked, .bpmn-property-header .header-tools i:hover {
+.bpmn-property-header .header-tools .clicked,
+.bpmn-property-header .header-tools i:hover {
     background: none;
     border: none;
 }
 
 .bpmn-property-header .header-icon span::first-letter {
-    text-transform:capitalize;
+    text-transform: capitalize;
 }
 
 
 /* Scrollbar behavior in property details block */
 .bpmn-properties-body {
-	height: 100%;
+    height: 100%;
 }
+
 .bpmn-properties-body .categorization {
-	height: 100%;
+    height: 100%;
 }
+
 .bpmn-properties-body .categorization-master {
     background: var(--theia-titleBar-activeBackground);
 }
+
 .categorization>.categorization-master ul li.selected>span {
     color: var(--theia-sideBar-foreground);
     background: var(--theia-sideBar-background);
@@ -100,48 +106,56 @@
     overflow: auto;
     margin-bottom: 28px;
 }
+
 /* Button layout in property details block */
 .bpmn-properties-body .categorization-detail button {
-	float:right;
-	color: var(--theia-button-foreground);
+    float: right;
+    color: var(--theia-button-foreground);
     background-color: var(--theia-button-background);
     cursor: pointer;
     border: none;
     padding: 4px 9px;
     margin: 0 1px;
 }
+
 .bpmn-properties-body .categorization-detail button:focus {
     outline: 1px solid var(--theia-focusBorder);
     outline-offset: 1px;
 }
+
 .bpmn-properties-body .categorization-detail button:hover {
     background-color: var(--theia-button-hoverBackground);
 }
+
 .bpmn-properties-body .categorization-detail .child-controls {
-	float:right;
-	border-bottom: 1px solid #aaa;
+    float: right;
+    border-bottom: 1px solid #aaa;
     width: 100%;
     padding-bottom: 5px;
 }
 
-
 .bpmn-properties-body .categorization-detail .vertical-layout {
-	clear: both;
+    clear: both;
 }
 
 /* Custom BPMN Styles **/
+.bpmn-properties-body .control>textarea {
+    min-height: 14rem !important;
+}
 
 .bpmn-properties-body .control.text-file-editor>label {
-    width:100%;
+    width: 100%;
     flex-direction: row;
     justify-content: space-between;
 }
+
 .bpmn-properties-body .control.text-file-editor>label .file-selector {
     font-weight: bold;
     color: var(--theia-focusBorder);
 }
+
 .bpmn-properties-body .control.text-file-editor>textarea {
-    min-height: 12em;
+    min-height: 22rem !important;
 }
 
 .bpmn-properties-body .control.text-file-editor>textarea.fileInputMode {
@@ -149,9 +163,6 @@
     line-height: 1.7rem;
 }
 
-.root_properties_conditionExpression textarea {
-    min-height: 14em !important;    
-}
 .input-description {
     color: #666;
     font-size: var(--theia-ui-font-size0) !important;
