--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -115,6 +115,8 @@
 .textAnnotation .bpmn-text-node text {
     fill: #447c3c;
     text-anchor: start;
+    white-space: pre;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .task .bpmn-text-node text {
