--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -243,7 +243,7 @@
 
 /* Extension Imixs-Workflow (draft) */
 .intermediateCatchEvent.bpmnextension-imixs>circle {
-    fill: #2579afc2;
+    fill: #6f8dab;
     stroke-width: 2px;
     stroke: #d48729;
 }
