--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -86,6 +86,15 @@
     fill: #82848a;
 }
 
+.dataStoreReference>.sprotty-node {
+    opacity: 80%;
+    fill: transparent;
+}
+
+.dataStoreReference>.sprotty-icon {
+    stroke-width: 2;
+}
+
 .message>.sprotty-node {
     opacity: 80%;
     stroke: var(--theia-focusBorder);
