fixed css (Issue #382)

--- a/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
+++ b/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
@@ -56,6 +56,10 @@
     cursor: row-resize;
 }
 
+.bpmn-property-header .header-icon {
+    display: inherit;
+}
+
 .bpmn-property-header .header-icon i {
     padding-left: 4px;
     padding-right: 4px;
