added double click event listener (Issue #416)

--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -153,6 +153,11 @@
     fill: #f5f9ff;
 }
 
+.subProcess>rect.expand {
+    fill: transparent;
+    cursor: pointer;
+}
+
 .BPMNLabel>.sprotty-node {
     fill: transparent;
 }
